melhorias na parte de seguranca